<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">安存语录</string>
    <string name="app_phone">95105857</string>
    <string name="app_compayname">安存科技</string>
    <string name="app_url">http://www.95105857.com</string>
    
    <string name="welcomeregisterinfo1">欢迎使用安存语录！对您商务和日常生活中的重要电话进行录音保全，必要时还可以向公证机关申办公证。现在开通10月31日前不收取功能费，次月1日起正式收费，每月30元，通话费按原有资费标准收取。</string>
    <string name="servercontent">《安存语录服务条款》</string>
    <string name="serverclause">服务条款</string>
    <string name="servercontenttip">请先阅读并同意《安存语录服务条款》</string>
    <string name="unsubscribe_remark">注:所有录音自行删除后才能退订(包括回收站)可登录官网www.95105857.com进行操作</string>
    <string name="extraction_code_tip2">(http://www.95105857.com)公开查询、下载本条通话录音；并可作为依据提交给第三方，以证明录音的真实性、可靠性和法律效力。</string>
    <string name="notary_notify_tip1">申请人通过安存语录成功录制通话内容后，到表格下载区下载表格，按要求如实填写各项内容，准备好相关材料，向公证处申请办理公证。</string>
    <string name="notary_notify_tip2">公证员结合安存语录语音保全系统，对申请公证的事项进行全面审查。</string>
    <string name="notary_notify_tip3">从安存语录语音保全系统数据库调取需公证的录音资料。</string>
    
	<string name="back">返回</string>
	<string name="login">登录</string>
    <string name="register">注册</string>
    <string name="nodata">暂无数据</string>
    <string name="reset_password">重置密码</string>
    <string name="accounthint">请输入手机号码</string>
    <string name="passwordhint">请输入密码</string>
    <string name="newpasswordhint">请输入新密码</string>
    <string name="repasswordhint">请再次输入密码</string>
    <string name="autologinttxt">自动登录</string>
    <string name="forgetgesutepassword">忘记手势密码</string>
    <string name="otheraccountlogin">用其他账号登录</string>
    <string name="getauthcode">获取校验码</string>
    <string name="regetauthcode">重新获取校验码</string>
    <string name="phoneemptytip">手机号码不能为空</string>
    <string name="authcodehint">请输入校验码</string>
    <string name="pwdemptytip">密码不能为空</string>
    <string name="autocodeemptytip">验证码不能为空</string>
    <string name="twopwddifftip">二次密码输入不一致</string>
    <string name="passwordformaterror">密码格式不正确</string>
    <string name="feedbackcontentemptytip">请输入反馈内容</string>
    <string name="usernameorpassworderrortip">用户名或密码有误</string>
    <string name="changepasswordsuccess">修改密码成功</string>
    <string name="next">下一步</string>
    <string name="goregister">立即注册</string>
    <string name="searchbarhint1">请输入拼音或联系人姓名</string>
    <string name="searchbarhint2">请输入被叫方号码</string>
    <string name="gologin">马上去登录</string>
    <string name="nohaveaccount">还没有账号？</string>
    <string name="haveaccount">已有账号</string>
    <string name="register_success">恭喜您，注册成功</string>
    <string name="reset_password_success">恭喜您，重置密码成功</string>
    <string name="login_tip">请使用本机号码注册或登录，非本机号码登录时通话录音将无法被正确保全。</string>
    <string name="myaccount">我的账户</string>
    <string name="dial">拨号盘</string>
    <string name="callrecordeds">通话记录</string>
    <string name="contact">通讯录</string>
    <string name="recordeds">我的录音</string>
    <string name="checknetworkconnected">网络连接不可用，请检查网络设置</string>
    <string name="suredeleterecording">确认删除该条录音？</string>
    <string name="deleterecordinginputpasswordtip">请输入登录密码——被录音删除将进入录音回收站，如需还原或彻底删除请登录官网“我的录音-回收站”进行操作。</string>
    <string name="mobiledownloadtip">录音首次收听前需加载且需消耗一定的网络流量，当前网络环境为移动2G/3G网络，建议在Wifi环境下加载时长较长的通话录音，是否确认在当前网络模式下加载？</string>
    <string name="recording_detail">录音详情</string>
    <string name="calling">主叫号码</string>
    <string name="called">被叫号码</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="invalid_time">失效时间</string>
    <string name="recording_length">录音时长</string>
    <string name="recorded_remark">录音备注</string>
    <string name="remark_edit_hint">你还没有添加备注</string>
    <string name="not_expired">不过期</string>
    <string name="view_extractioncode">查看提取码</string>
    <string name="reg_extractioncode">申请提取码</string>
    <string name="copy_success">复制成功</string>
    <string name="undo_success">撤销成功</string>
    <string name="undo_extraction_code_sure">是否撤销提取</string>
    <string name="extraction_code">提取码</string>
    <string name="extraction_code_validity_tip">有效期至</string>
    <string name="extraction_code_tip1">凭提取码可在官网</string>
    <string name="extraction_code_tip">温馨提醒：请妥善保管好您的录音提取码。</string>
    <string name="copy_extraction_code">复制提取码</string>
    <string name="short_message_send">以短信的形式发送</string>
    <string name="undo_extraction_code">撤销提取</string>
    <string name="notary_request_success">申办公证</string>
    <string name="notary_notice">公证须知</string>
    <string name="apple_extraction_code_tip">凭提取码可在官网公开查询、验证本条通话录音，确定申请？</string>
    <string name="apply_notary_submit_tip">您确定将该录音提交至公证机构申办公证吗？</string>
    <string name="apply_notary_cancel_tip">您确定要取消该录音申办公证吗？</string>
    <string name="recording_remark_modify_success">录音备注修改成功</string>
    <string name="advanced_search">高级搜索</string>
    <string name="unsubscribe">退订</string>
    <string name="unsubscribe_sure">确认退订</string>
    <string name="modify_password_success_tip">密码修改成功啦，亲如此有防范风险意识真的很值得大家学习哦~</string>
    <string name="modify_password_tip">密码为6&#8211;16个字符，字母加数字或符号的组合，不能单独使用字母、数字或符号</string>
    <string name="exitlogin_sure">确认需要退出应用吗?</string>
    <string name="cleanrecording_sure">是否删除本地所有录音缓存文件？</string>
    <string name="cleanrecording_success">成功清理本地所有录音文件</string>
    <string name="cleanrecording_fail">清理本地录音文件失败</string>
    <string name="press_again_exit">再按一次退出程序</string>
    <string name="nodnowload">未下载</string>
    <string name="tip">小贴士</string>
    <string name="feedback">意见反馈</string>
    <string name="versioncheck">新版本检测</string>
    <string name="comment">给个好评吧</string>
    <string name="aboutus">关于我们</string>
    <string name="cleanrecording">清理本地录音缓存</string>
    <string name="modifypassword">修改密码</string>
    <string name="exitlogin">退出登录</string>
    <string name="nocontactphone">无任何联系号码</string>
     <string name="gesturestate">手势密码</string>
    <string name="gestureset">手势设置</string>
    <string name="agegestureset">请再绘制一次</string>
    <string name="twogesturesetdiff">两次设置不一致请重新绘制</string>
    <string name="gesturesetsuccess">手势密码设置成功</string>
    <string name="changegesture">修改手势密码</string>    
    <string name="lockpattern_recording_incorrect_too_short" >"至少连接4个点，请重试"</string>
    <string name="lockpattern_error" >"手势密码不对"</string>
</resources>