<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/bg_activity">
    
    <include layout="@layout/module_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    
            <start.widget.CustomEditText
		        android:id="@+id/et_old_pwd"
		        style="@style/edittext1"
		        android:inputType="textPassword"
		 	 	android:hint="@string/passwordhint" />
            
            <View 
	            android:layout_width="match_parent"
	            android:layout_height="10.0dip"/>
            
            <start.widget.CustomEditText
		        android:id="@+id/et_new_pwd"
		        style="@style/edittext1"
		        android:inputType="textPassword"
		 	 	android:hint="@string/newpasswordhint" />
            
            <View 
	            android:layout_width="match_parent"
	            android:layout_height="10.0dip"/>
            
            <start.widget.CustomEditText
		        android:id="@+id/et_new_repwd"
		        style="@style/edittext1"
		        android:inputType="textPassword"
		 	 	android:hint="@string/repasswordhint" />
            
         </LinearLayout>

        <View 
            android:layout_width="match_parent"
            android:layout_height="10.0dip"/>
        
        <Button
            android:id="@+id/btn_submit"
            style="@style/button4"
            android:enabled="false"
            android:text="@string/sure" />
        
        <View 
            android:layout_width="match_parent"
            android:layout_height="10.0dip"/>
        
        <TextView 
            style="@style/textview2"
            android:textColor="#888888"
            android:text="@string/modify_password_tip"/>
        
    </LinearLayout>
    
</LinearLayout>