<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical" >

    <include layout="@layout/module_header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15.0dip" >

            <LinearLayout
                android:id="@+id/ll_first_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
		            android:id="@+id/txttip"
	                style="@style/textview2"
	                android:textColor="#999999"
	                android:layout_gravity="center"
	                android:visibility="gone" />
                
                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />
                
                <start.widget.CustomEditText
                    android:id="@+id/et_phone"
                    style="@style/edittext1"
                    android:hint="@string/accounthint"
                    android:inputType="phone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <LinearLayout
                    android:id="@+id/fr_server"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <CheckBox
                        android:id="@+id/cb_agree"
                        style="@style/checkbox1"
                        android:text="已阅读并同意" />

                    <TextView
                        android:id="@+id/txt_servercontent"
                        style="@style/textview2"
                        android:clickable="true"
                        android:onClick="onClick"
                        android:text="@string/servercontent" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <Button
                    android:id="@+id/btn_re_get_checksum"
                    style="@style/button1"
                    android:text="@string/next" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <TextView
                    style="@style/textview2"
                    android:layout_gravity="center"
                    android:text="注：目前只支持中国联通手机"
                    android:textColor="#ff0000" />
                
                <TextView
		            android:id="@+id/txttip2"
	                style="@style/textview2"
	                android:textColor="#999999"
	                android:layout_gravity="center"
	                android:text="网络超时，请稍后重试，如有疑问可电话咨询95105857"
	                android:visibility="gone" />
                
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_code_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <start.widget.CustomEditText
                    android:id="@+id/et_checksum"
                    style="@style/edittext1"
                    android:hint="@string/authcodehint"
                    android:inputType="number" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <Button
                    android:id="@+id/btn_zre_get_checksum"
                    style="@style/button1"
                    android:text="@string/getauthcode" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <Button
                    android:id="@+id/btn_submit_checksum"
                    style="@style/button1"
                    android:text="@string/submit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <start.widget.CustomEditText
                    android:id="@+id/et_setting_password"
                    style="@style/edittext1"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20.0dip" />

                <start.widget.CustomEditText
                    android:id="@+id/et_setting_repassword"
                    style="@style/edittext1"
                    android:hint="@string/repasswordhint"
                    android:inputType="textPassword" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10.0dip" />

                <TextView
                    style="@style/textview2"
                    android:text="@string/modify_password_tip"
                    android:textColor="#888888" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20.0dip" />

                <Button
                    android:id="@+id/btn_next"
                    style="@style/button1"
                    android:layout_width="match_parent"
                    android:layout_height="45.0dip"
                    android:text="@string/goregister" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_second_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="200.0dip"
                    android:background="@drawable/bg1" >

                    <TextView
                        android:id="@+id/success_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawableLeft="@drawable/ic_expression_success"
                        android:drawablePadding="10.0dip"
                        android:gravity="center"
                        android:textColor="#333333"
                        android:textSize="22.0dip" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="15.0dip" />

                <Button
                    android:id="@+id/btn_done"
                    style="@style/button1"
                    android:layout_width="match_parent"
                    android:layout_height="45.0dip"
                    android:text="@string/gologin" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>