<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity"
    android:orientation="vertical" >

    <include layout="@layout/module_header" />

    <LinearLayout
        android:id="@+id/ll_first_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5.0dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <start.widget.CustomEditText
                android:id="@+id/et_pwd"
                style="@style/edittext1"
                android:hint="@string/passwordhint"
                android:inputType="textPassword" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10.0dip" />

        <Button
            android:id="@+id/btn_submit"
            style="@style/button4"
            android:enabled="false"
            android:text="@string/unsubscribe_sure" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10.0dip" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unsubscribe_remark"
            android:textColor="#FF0000"
            android:textSize="15.0dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_second_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5.0dip"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200.0dip"
            android:background="@drawable/bg1" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="10.0dip"
                android:gravity="center"
                android:textColor="#333333"
                android:textSize="22.0dip"
                android:text="退订成功"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15.0dip" />

        <Button
             android:id="@+id/btn_return"
             style="@style/button1"
             android:layout_width="match_parent"
             android:layout_height="45.0dip"
             android:text="@string/back" />
    </LinearLayout>

</LinearLayout>